# mandelbrot-webgl

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
scripts/: bench-deep-view.mjs  bench-reference.mjs  bench-regressions.mjs  visual-regression.mjs  visual-regression.py
src/: app.ts  main.ts  styles.css  types.ts  wasmApi.ts  wasmSimd.ts
src/cache/: lru.ts
src/iteration/: autoIterController.ts
src/math/: series.ts  view.ts
src/reference/: referenceClient.ts  referenceManager.ts
src/render/: webglRenderer.ts
src/scheduler/: tilePolicy.ts  workerPool.ts
src/state/: urlState.ts
src/tiles/: tileKey.ts  tilePlanner.ts
src/workers/: perturbation.ts  referenceWorker.ts  tileWorker.ts  wasmPerturbation.ts
tests/: algorithm.test.ts  autoIterController.test.ts  lru.test.ts  referenceManager.test.ts  tilePlanner.test.ts  tilePolicy.test.ts  urlState.test.ts  workerSafety.test.ts
tests/e2e/: app.spec.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
